// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`execute price endpoint should return success - aum 1`] = `
{
  "data": {
    "result": 88412710.73007037,
  },
  "result": 88412710.73007037,
  "statusCode": 200,
  "timestamps": {
    "providerDataReceivedUnixMs": 978347471111,
    "providerDataRequestedUnixMs": 978347471111,
  },
}
`;

exports[`execute price endpoint should return success - nav 1`] = `
{
  "data": {
    "result": 10.170643,
  },
  "result": 10.170643,
  "statusCode": 200,
  "timestamps": {
    "providerDataReceivedUnixMs": 978347471111,
    "providerDataRequestedUnixMs": 978347471111,
  },
}
`;

exports[`execute transactions endpoint should return success 1`] = `
{
  "data": {
    "decimals": 6,
    "navPrice": 10.170643,
    "result": "0x098c0293",
    "transactions": [
      {
        "created_at": "1",
        "dollar_amount": "-100.0",
        "operation_type": "REDEEM",
        "status": "DONE",
        "ticker": "T",
      },
      {
        "created_at": "2",
        "operation_type": "REDEEM",
        "share_amount": "-1.0",
        "status": "DONE",
        "ticker": "T",
      },
      {
        "created_at": "3",
        "notional_value": "-50.0",
        "operation_type": "REDEEM",
        "share_amount": "-1.0",
        "status": "DONE",
        "ticker": "T",
      },
    ],
  },
  "result": "0x098c0293",
  "statusCode": 200,
  "timestamps": {
    "providerDataReceivedUnixMs": 978347471111,
    "providerDataRequestedUnixMs": 978347471111,
  },
}
`;
